--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 #ignore thumbnails created by windows
 Thumbs.db
 #Ignore files build by Visual Studio
@@ -35,3 +34,5 @@ Translation/TrlUtil.vshost.exe.manifest
 *.snupkg
 
 net462/
+
+UpgradeLog.htm
