Update submodule and include lockfiles
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/KeePass/KeePass.csproj
+++ b/KeePass/KeePass.csproj
@@ -46,6 +46,11 @@
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="obj\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="obj\**" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System.Security" />
   </ItemGroup>
   <ItemGroup>
