--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,7 @@ insert_final_newline = true
 indent_size = 4
 indent_style = tab
 tab_width = 4
+
+[*.{csproj,props}]
+indent_size = 2
+indent_style = space
