Fix and/or ignore remaining warnings
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -73,7 +73,7 @@
         <UseCommonOutputDirectory>false</UseCommonOutputDirectory>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <NoWarn>
-            $(NoWarn);1591;CA1852;CA1416;CA1822;CA1305;CA1304;CA1309;CA1310;CA1507;CA1712;CA1806;CA1825;CA1834;CA1838;CA1845;CA1846;CA1847;CA1853;CA1854;CA1861;CA1863;CA1864;CA1865;CA1866;CA2022;CA2101;CA2201;CA2249;CA2251;CA2263;CA5364;CS8600;CS8601;CS8602;CS8603;CS8604;CS8618;CS8622;CS8625;CS8629;CS8630;CS8765;NETSDK1005;SYSLIB0003;SYSLIB0004;SYSLIB0014;WFAC010
+      $(NoWarn);SYSLIB0021;SYSLIB0001;SYSLIB0006;SYSLIB0023;SYSLIB0044;SYSLIB0022;NU1701;1591;CA1852;CA1416;CA1822;CA1305;CA1304;CA1309;CA1310;CA1507;CA1712;CA1806;CA1825;CA1834;CA1838;CA1845;CA1846;CA1847;CA1853;CA1854;CA1861;CA1863;CA1864;CA1865;CA1866;CA2022;CA2101;CA2201;CA2249;CA2251;CA2263;CA5364;CS8600;CS8601;CS8602;CS8603;CS8604;CS8618;CS8622;CS8625;CS8629;CS8630;CS8765;NETSDK1005;SYSLIB0003;SYSLIB0004;SYSLIB0014;WFAC010
         </NoWarn>
         <DebugType>embedded</DebugType>
 
