Change output directory
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -35,7 +35,8 @@
   <!-- Set Folder Variables -->
   <PropertyGroup>
     <WorkspaceFolder>$(MSBuildThisFileDirectory.TrimEnd('\/'))</WorkspaceFolder>
-    <OutNoSlash>$(WorkspaceFolder)/Build/$(MSBuildProjectName)/$(Configuration)</OutNoSlash>
+    <OutNoSlash Condition=" '$(Configuration)' == 'Release' ">$(WorkspaceFolder)/Build</OutNoSlash>
+    <OutNoSlash Condition=" '$(Configuration)' != 'Release' ">$(WorkspaceFolder)/Build/$(Configuration)</OutNoSlash>
     <IntNoSlash>$(WorkspaceFolder)/.build/$(MSBuildProjectName)/$(Configuration)/$(Platform)$(TargetArchitecture)</IntNoSlash>
   </PropertyGroup>
 
