Restore only the project
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -45,7 +45,7 @@ jobs:
         dotnet-version: '8.x'
 
     - name: Restore Packages
-      run: dotnet restore
+      run: dotnet restore "${{ matrix.project.path }}"
 
     - name: Build ${{ matrix.project.name}}
       run: dotnet build "${{ matrix.project.path }}" --configuration "${{ matrix.configuration }}"
