--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -29,7 +29,7 @@ jobs:
           - name: KeePass
             path: KeePass/KeePass.csproj
           - name: KeePassLib
-            path: KeePassLib/KeePassLib.csproj,
+            path: KeePassLib/KeePassLib.csproj
           - name: OfflinePasswordCheck
             path: Plugins/OfflinePasswordCheck/OfflinePasswordCheck.sln
         configuration: [Release, Debug]
